[package]
name = "sph"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5"
lazy_static = "1.4.0"
rand = "0.7.3"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sph_benchmark"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
